@@ -17,14 +17,15 @@
  */
 package de.tudarmstadt.ukp.inception.recommendation.api.model;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.IteratorUtils.unmodifiableIterator;
 
 import java.util.AbstractCollection;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 
 import org.apache.commons.lang3.Validate;
 
@@ -65,10 +66,32 @@ public class SuggestionDocumentGroup<T extends AnnotationSuggestion>
     public static <V extends AnnotationSuggestion> SuggestionDocumentGroup<V> groupsOfType(
             Class<V> type, List<AnnotationSuggestion> aSuggestions)
     {
-        List<AnnotationSuggestion> filteredSuggestions = aSuggestions.stream()
-                .filter(type::isInstance) //
-                .collect(toList());
+        var filteredSuggestions = aSuggestions.stream().filter(type::isInstance) //
+                .toList();
         return new SuggestionDocumentGroup<V>((List<V>) filteredSuggestions);
+    }
+
+    /**
+     * @param aSuggestions
+     *            the list to retrieve suggestions from
+     * @return a SuggestionDocumentGroup where only suggestions of type V are added
+     */
+    public static Map<Class<? extends AnnotationSuggestion>, SuggestionDocumentGroup<?>> groupByType(
+            List<AnnotationSuggestion> aSuggestions)
+    {
+        var groups = new LinkedHashMap<Class<? extends AnnotationSuggestion>, List<AnnotationSuggestion>>();
+
+        for (var suggestion : aSuggestions) {
+            var group = groups.computeIfAbsent(suggestion.getClass(), $ -> new ArrayList<>());
+            group.add(suggestion);
+        }
+
+        var groupsMap = new LinkedHashMap<Class<? extends AnnotationSuggestion>, SuggestionDocumentGroup<?>>();
+        for (var entry : groups.entrySet()) {
+            groupsMap.put(entry.getKey(), new SuggestionDocumentGroup<>(entry.getValue()));
+        }
+
+        return groupsMap;
     }
 
     @Override
